<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="185dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"
                android:layout_gravity="center_horizontal" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_item_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:textAlignment="center"
            android:text="@string/traveler_alias"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_item_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nama"
            android:textSize="14sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <TextView
            android:id="@+id/tv_item_ttl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/TTL"
            android:textSize="14sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <TextView
            android:id="@+id/tv_item_negara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/negara"
            android:textSize="14sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        <TextView
            android:id="@+id/tv_item_desk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi"
            android:textSize="14sp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="30dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:src="@drawable/instagram_icon"
                    android:scaleType="centerInside"/>

                <TextView
                    android:id="@+id/tv_item_ig"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ig"
                    android:textAlignment="center"
                    android:layout_marginBottom="24dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/youtube_icon"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/tv_item_yt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yt"
                    android:textAlignment="center"
                    android:layout_marginBottom="24dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/tiktok_icon"
                    android:scaleType="centerInside" />

                <TextView
                    android:id="@+id/tv_item_tiktok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiktok"
                    android:textAlignment="center"
                    android:layout_marginBottom="24dp"/>
        </TableLayout>
    </LinearLayout>
</ScrollView>
